[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axonfi"
version = "0.2.3"
description = "Python SDK for Axon — treasury and payment infrastructure for autonomous AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Axon", email = "axonhq@proton.me" }]
keywords = ["axon", "ai-agents", "crypto", "payments", "eip-712", "vault", "treasury"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "eth-account>=0.13.0",
    "web3>=7.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://axonfi.xyz"
Documentation = "https://axonfi.xyz/llms.txt"
Repository = "https://github.com/axonfi/sdk-python"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/axonfi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
